MDEV-13890 mariabackup.xb_compressed_encrypted failed in buildbot, InnoDB: assertion failure

The assertion failure was relaxed in
commit 02ba15a9dae97f23cfe47fa788c09d65aa1cfcd2
but it was not enough, because another assertion would fail.

trx_undo_free_prepared(): Allow any undo log state. For transactions
that were resurrected in TRX_STATE_COMMITTED_IN_MEMORY
the undo log state would have been reset by trx_undo_set_state_at_finish().